--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edazpoato's website",
+  "name": "edazpoato-site",
   "version": "1.2.3",
-  "author": "Edazpotato (https://edazpotato.github.io)"
+  "author": "Edaz"
 }
